--- a/style.css
+++ b/style.css
@@ -40,17 +40,18 @@ body {
   gap: 15px;
   list-style: none;
   display: block;
+  background: #ffffff;
 }
 .header .nav ul li {
   margin: 5px 0;
 }
 .header .nav ul li a {
   text-decoration: none;
-  color: #333;
-  opacity: 0.7;
+  color: black;
+  font-weight: bolder;
 }
 .header .nav ul li a:hover {
-  opacity: 1;
+  color: #d02b2f;
 }
 
 .hero-section {
