--- a/style.scss
+++ b/style.scss
@@ -63,17 +63,18 @@ body {
             gap: 15px;
             list-style: none;
             display: block;
+            background: $background-color;
 
             li {
                 margin: 5px 0;
 
                 a {
                     text-decoration: none;
-                    color: #333;
-                    opacity: 0.7;
+                    color: black;
+                    font-weight: bolder;
 
                     &:hover {
-                        opacity: 1;
+                        color: $dark-red;
                     }
                 }
             }
